--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,13 @@
-<div class="container">
+<div class="container" style="max-width: 400px">
   <div style="color: blue; margin-bottom: 20px">
     <h1>{{title}}</h1>
     <h3>{{description}}</h3>
   </div>
  
   <app-form-upload></app-form-upload>
+ 
+  <br/>
+  <br/>
+  
+  <app-list-upload></app-list-upload>
 </div>
