--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,8 +5,9 @@
   </div>
  
   <app-form-upload></app-form-upload>
- 
-  <br/>
+
+<app-signup></app-signup>
+ <br/>
   <br/>
   
   <app-list-upload></app-list-upload>
