--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -12,7 +12,10 @@
     </nav>
   </header>
   
-  <div class="all">
-    <h4>Welcome, {{ user }}</h4>
-  </div>
   
+    <h5>Welcome, {{ uname }}</h5>
+  <ul>
+    <li>
+      <a routerLink='/upload'>Upload Files</a>
+    </li>
+  </ul>
