--- a/src/app/form-upload/form-upload.component.html
+++ b/src/app/form-upload/form-upload.component.html
@@ -3,3 +3,6 @@
   </label>
    
   <button class="btn btn-success" [disabled]="!selectedFiles" (click)="upload()">Upload</button>
+  <br/>
+  <br/>
+  <app-list-upload></app-list-upload>
