--- a/src/app/list-upload/list-upload.component.html
+++ b/src/app/list-upload/list-upload.component.html
@@ -1,12 +1,17 @@
+<div *ngIf="level>0">
 <button class="button btn-info" *ngIf='showFile'
   (click)='showFiles(false)'>Hide Files</button>
  
 <button class="button btn-info" *ngIf='!showFile'
   (click)='showFiles(true)'>Show Files</button>
- 
+</div>
+<div *ngIf="level==0" class="panel-heading">
+  Root directory<br/>
+  <button style="text-decoration: underline;cursor: pointer;" (click)="traverse()">{{ uname  }}</button>
+</div>
 <div [hidden]="!showFile">
   <div class="panel panel-primary">
-    <div class="panel-heading">List of Files</div>
+    <div *ngIf="level>0" class="panel-heading">List of Files</div>
     <div *ngFor="let file of fileUploads | async">
       <div class="panel-body">
         <app-details-upload [fileUpload]='file'></app-details-upload>
