front End added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,6 @@
-<div class="container" style="max-width: 400px">
-  <div style="color: blue; margin-bottom: 20px">
-    <h1>{{title}}</h1>
-    <h3>{{description}}</h3>
-  </div>
-  <ul>
-  <li>
-    <a routerLink="login">Login</a>
-  </li>
-  <li>
-    <a routerLink="dashboard">Dashboard</a>
-  </li>
-  </ul>
-  <router-outlet></router-outlet>
-</div>
+<app-navigation></app-navigation>
+
+<router-outlet>
+
+
+</router-outlet>
