--- a/src/app/form-upload/form-upload.component.html
+++ b/src/app/form-upload/form-upload.component.html
@@ -1,51 +1,6 @@
-<header>
-    <div class="container">
-        <div class="logo-box">
-            <a href="/">
-                <img src="https://html5book.ru/wp-content/uploads/2015/01/logo-header.png">
-            </a>
-        </div>
-        <nav>
-            <ul>
-                <li><a href="">home</a></li>
-                <li><a href="">features</a></li>
-                <li><a href="">community</a></li>
-                <li><a href="">login</a></li>
-                <li><a href="">contact</a></li>
-            </ul>
-        </nav>
-    </div>
-</header>
-
-
-
-<div class="content" style="z-index:0;">
-    <div class="content__container">
-        <p class="content__container__text">
-            The Last
-        </p>
-
-        <ul class="content__container__list">
-            <li class="content__container__list__item">File Syncing</li>
-            <li class="content__container__list__item">Data Privacy</li>
-            <li class="content__container__list__item">Cloud Collaboration</li>
-            <li class="content__container__list__item">File Sharing</li>
-        </ul>
-
-    </div>
-</div>
-<p class="platform">Platform You'll Ever Need</p>
-
-
-
-
-<section class="home">
-
-</section>
 <div style="height: 1000px;">
-    <img src='../../assets/pictures/sdpback1.png' style="width:100%; height: 800px;margin-bottom: 0px;">
     <!-- just to make scrolling effect possible -->
-    <div class="wrapperhead">
+    <div class="wrapperhead" style="padding-top: 50px;">
         <div class="wrapper">
             <p class="uploadlabel" style='margin-bottom:20px; text-align: center; color: blue; font-size: 30px;'>You Can Upload File, Click On The Below Button</p>
             <div class="text-center">
