--- a/src/app/list-upload/list-upload.component.html
+++ b/src/app/list-upload/list-upload.component.html
@@ -1,21 +1,31 @@
 <div *ngIf="level>0">
-<button class="button btn-info" *ngIf='showFile'
-  (click)='showFiles(false)'>Hide Files</button>
- 
-<button class="button btn-info" *ngIf='!showFile'
-  (click)='showFiles(true)'>Show Files</button>
+  <button class="button btn-info" *ngIf='showFile' (click)='showFiles(false)'>Hide Files</button>
+
+  <button class="button btn-info" *ngIf='!showFile' (click)='showFiles(true)'>Show Files</button>
 </div>
 <div *ngIf="level==0" class="panel-heading">
-  Root directory<br/>
-  <button style="text-decoration: underline;cursor: pointer;" (click)="traverse()">{{ uname  }}</button>
+  Root directory<br />
+  <button style="text-decoration: underline;cursor: pointer;" (click)="traverse(file)">{{ uname  }}</button>
 </div>
 <div [hidden]="!showFile">
   <div class="panel panel-primary">
-    <div *ngIf="level>0" class="panel-heading">List of Files</div>
-    <div *ngFor="let file of fileUploads | async">
-      <div class="panel-body">
-        <app-details-upload [fileUpload]='file'></app-details-upload>
+    <div *ngIf="level>0" class="panel-heading">List of Files & directories</div>
+      <input type="text" id="dname" class="form-control" [(ngModel)]="dname" placeholder="Enter directory name" />
+      <button (click)="createDirectory()" class="btn btn-primary">+ Create Folder</button>
+      <br />
+      Directories:<br/>
+      <div *ngFor="let file of fileUploads | async">
+        <div class="panel-body" *ngIf="file.name.endsWith('/') && (file.name.split('/')).length==level+2 ">
+          <button style="text-decoration: underline;cursor: pointer;" (click)="traverse(file)">
+            {{file.name}}
+          </button>
+        </div>
       </div>
+      <br/>
+      Files:<br/>
+      <div *ngFor="let file of fileUploads | async">
+        <app-details-upload [level]='level' [fileUpload]='file'></app-details-upload>
+      
     </div>
   </div>
 </div>
