--- a/src/app/details-upload/details-upload.component.html
+++ b/src/app/details-upload/details-upload.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="!fileUpload.name.endsWith('/')" class="jumbotron">
+<div *ngIf="!fileUpload.name.endsWith('/') && fileUpload.name.split('/').length==level+1" class="jumbotron">
     <a href="{{fileUpload.url}}">{{fileUpload.name}}</a><br/><br/>
     <button (click)="copyText(fileUpload.url)" style="margin-right: 5px;"  class="btn btn-success">Share</button>
     <button (click)='delete(fileUpload)' class="btn btn-danger">Delete</button>
