--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -114,7 +114,6 @@ nav a:hover:after {
 .home {
     width: 100%;
     height: 100vh;
-    background-image: url(https://images.unsplash.com/photo-1498550744921-75f79806b8a7?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=b0f6908fa5e81286213c7211276e6b3d&auto=format&fit=crop&w=1500&q=80);
     background-position: center top;
     background-size: cover;
 }
@@ -221,6 +220,8 @@ nav a:hover:after {
 .content__container__list__item {
     line-height: 40px;
     margin: 0;
+    text-shadow: 2px 2px 2px white;
+    color: black;
 }
 
 @-webkit-keyframes opacity {
