--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -14,8 +14,50 @@
     </div>
 </div>
 <p class="platform">Platform You'll Ever Need</p>
-
+<div style="height: 80px; "></div>
 <section class="home">
 
 </section>
-<img src='../../assets/pictures/sdpback1.png' style="width:100%; height: 800px;margin-bottom: 0px;">
+
+<div class="footer" style="width:100%; height: 300px;margin-bottom: 0px;">
+
+    <div class="container-fluid">
+
+        <div class="row">
+            <div class="col-lg-4 text-center">
+                <p style="color: white; margin-top:40px;font-size: 20px;">About Cloud</p>
+                <ul style="font-size: 15px;color: white;list-style-type: none; padding-right: 100px;">
+                    <li style="text-decoration:underline;">Events</li>
+
+                    <li style="text-decoration:underline;">Events</li>
+
+                    <li style="text-decoration:underline;">Events</li>
+                </ul>
+            </div>
+            <div class="col-lg-4 text-center">
+                <p style="color: white; margin-top:40px;font-size: 20px;">Resources</p>
+                <ul style="font-size: 15px;color: white;list-style-type: none; padding-right: 70px;">
+                    <li style="text-decoration:underline;">Events</li>
+
+                    <li style="text-decoration:underline;">Events</li>
+
+                    <li style="text-decoration:underline;">Events</li>
+                </ul>
+            </div>
+            <div class="col-lg-4 text-center">
+                <p style="color: white; margin-top:40px;font-size: 20px;">Contact</p>
+                <ul style="font-size: 15px;color: white;list-style-type: none; padding-right: 50px;">
+                    <li style="text-decoration:underline;">Events</li>
+
+                    <li style="text-decoration:underline;">Events</li>
+
+                    <li style="text-decoration:underline;">Events</li>
+                </ul>
+            </div>
+
+        </div>
+        <div class="text-center">
+            <p style="font-size: 30px;font-weight: 500;color: white;">Copyright</p>
+        </div>
+    </div>
+</div>
