changed front end

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,16 +1,13 @@
-<header class="header">
-    <nav>
-        <div class="nav-brand">
-            <p>AWS Amplify Cognito Demo</p>
-        </div>
+<div style="height:70px;"></div>
+<div class="nav-brand" style="">
+    <p>AWS Amplify Cognito Demo</p>
+</div>
 
-        <div id="butonid" class="button-section">
-            <button type="button" class="btn btn-info" (click)="onLogOut()">
+<div id="butonid" class="button-section">
+    <button type="button" class="btn btn-info" (click)="onLogOut()">
           Logout
         </button>
-        </div>
-    </nav>
-</header>
+</div>
 
 
 <h5>Welcome, {{ uname }}</h5>
