--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -1,5 +1,5 @@
 <div class="container-login" style="background-image: url('../../assets/pictures/clouda.jpg'); ">
-    <div class="wrap-login text-center" style="padding : 80px 55px 30px 55px; z-index: 2;">
+    <div class="wrap-login text-center" style="padding : 30px 55px 30px 55px; ">
 
 
         <p class="sign-methods__link" (click)="onSignUp()">SignUp</p>
